# thumbor

./: .codacy.yml  .commit-template  .continuousrc  .coveragerc  .drone.sec  .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .travis.yml  .venv  .yamllint  AGENTS.md  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  History.md  LICENSE  MANIFEST.in  Makefile  README.md  README.mkd  SECURITY.md  TestDockerfile  TestDockerfile310  TestDockerfile311  TestDockerfile36  TestDockerfile37  TestDockerfile38  TestDockerfile39  build.py  flake8  install-opencv.sh  issue_template.md  mongo_check_start.js  (+17 more)
.circleci/: config.yml
.github/: dependabot.yml
aarch64/: Dockefile  build.sh  docker-setup.sh  thumbor.conf
debian/: changelog  control  copyright  pydist-overrides  rules  thumbor-worker.upstart  thumbor.conf  thumbor.debian.init  thumbor.default  thumbor.init  thumbor.install  thumbor.lintian-overrides  thumbor.postinst  thumbor.postrm  thumbor.ubuntu.upstart  thumbor.upstart
docker/: Dockerfile  requirements.txt
docs/: Makefile  administration.rst  autojpg.rst  available_detectors.rst  background_color.rst  blur.rst  brightness.rst  conf.py  configuration.rst  contrast.rst  convolution.rst  cover.rst  create_my_own_storage.rst  crop_and_resize_algorithms.rst  custom_detection.rst  custom_engines.rst  custom_error_handlers.rst  custom_error_handling.rst  custom_filters.rst  custom_handler_lists.rst  custom_loaders.rst  custom_optimizers.rst  custom_result_storages.rst  custom_routers.rst  custom_storages.rst  customizing.rst  detection_algorithms.rst  detectors.rst  documentation_structure.txt  enabling_detectors.rst  equalize.rst  extending.rst  extract_focal_points.rst  filling.rst  filters.rst  focal.rst  format.rst  getting_started.rst  gifv.rst  grayscale.rst  (+67 more)
integration_tests/: __init__.py  engines_test.py  pil_test.py  urls_helpers.py
old_tests/: base.py  test_app.py  test_config.py  test_console.py  test_context.py  test_detectors.py  test_focal_points.py  test_handlers.py  test_meta_transform.py  test_url_composer.py  test_utils.py
opencv_server/: server.py
perf/: run.sh  static_app.py  test_image_transform.js  thumbor.conf
tests/: Thumbor functional tests.jmx  Thumbor performance tests.jmx  __init__.py  base.py  conftest.py  invalid-thumbor.conf  test_app.py  test_config.py  test_console.py  test_context.py  test_crop.py  test_crypto.py  test_detectors.py  test_doctor.py  test_drop_shadow_filter.py  test_face_detection_filter.py  test_file_loader.py  test_file_storage.py  test_focal_points.py  test_handlers.py  test_http_loader.py  test_importer.py  test_media.py  test_meta_transform.py  test_mongo_storage.py  test_mysql_storage.py  test_nostorage.py  test_optimizers.py  test_pil_engine_transparent_resize.py  test_point.py  test_server.py  test_signal_handler.py  test_threadpool.py  test_transformer.py  test_url.py  test_url_composer.py  test_urls.py  test_utils.py  test_version.py  transform_helper.py
thumbor/: __init__.py  app.py  auto_image_format.py  conf.py  config.py  config_wrapper.py  console.py  context.py  crypto.py  default.key  doctor.py  handler.py  handlers.py  importer.py  media.py  point.py  rect.py  server.py  signal_handler.py  testing.py  threadpool.py  thumbor.conf  transformer.py  url.py  url_composer.py  utils.py
vows/: app_vows.py  base64_hmac_sha1_url_signer_vows.py  base_handler_vows.py  blacklist_vows.py  cascade_loader_detector_vows.py  cleanup_handler_vows.py  config_vows.py  console_vows.py  context_vows.py  crypto_handler_vows.py  crypto_vows.py  custom_handler_vows.py  detector_vows.py  file_error_handler_vows.py  file_loader_vows.py  file_storage_vows.py  fill_filter_vows.py  filters_vows.py  format_filter_vows.py  (+33 more)
(+458 files in other folders)
