[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thumbor"
version = "7.7.7"
description = "thumbor is an open-source photo thumbnail service by globo.com"
readme = { file = "README.mkd", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "globo.com", email = "thumbor@googlegroups.com" }]
keywords = [
  "imaging",
  "face",
  "detection",
  "feature",
  "thumbnail",
  "imagemagick",
  "pil",
  "opencv",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Multimedia :: Graphics :: Presentation",
]
dependencies = [
  "colorama>=0.4.6,<1.0.0",
  "derpconf>=0.8.4,<1.0.0",
  "JpegIPTC>=1.5,<2.0.0",
  "libthumbor>=2.0.2,<3.0.0",
  "piexif>=1.1.3,<2.0.0",
  "Pillow>=10.4.0,<12.0.0",
  "pytz>=2023.3.post1,<2024.0.0",
  "setuptools>=78.1.1,<79.0.0",
  "statsd>=4.0.1,<5.0.0",
  "thumbor-plugins-gifv>=0.1.5,<1.0.0",
  "tornado>=6.4,<7.0.0",
  "webcolors>=1.13.0,<2.0.0",
]

[project.optional-dependencies]
opencv = ["opencv-python-headless>=4.9.0.80,<5.0.0", "numpy>=1.26.3,<2.0.0"]
extra-libs = [
  "cairosvg>=2.8.2,<3.0.0",
  "pycurl>=7.45.2,<8.0.0",
  "pillow-avif-plugin>=1.4.1,<2.0.0",
  "pillow-heif>=0.22.0,<1.0.0",
]
tests = [
  "build>=1.2.1,<2.0.0",
  "coverage>=7.4.0,<8.0.0",
  "flake8>=7.0.0,<8.0.0",
  "isort>=5.13.2,<6.0.0",
  "pre-commit>=3.6.0,<4.0.0",
  "preggy>=1.4.4,<2.0.0",
  "pylint>=3.0.3,<4.0.0",
  "pyssim>=0.7,<1.0.0",
  "pytest>=7.4.4,<8.0.0",
  "pytest-asyncio>=0.23.3,<1.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "pytest-tldr>=0.2.5,<1.0.0",
  "pytest-xdist>=3.5.0,<4.0.0",
  "redis>=5.0.1,<6.0.0",
  "remotecv>=5.1.8,<6.0.0",
  "sentry-sdk>=1.39.1,<2.0.0",
  "yanc>=0.3.3,<1.0.0",
]
all = [
  "opencv-python-headless>=4.9.0.80,<5.0.0",
  "numpy>=1.26.3,<2.0.0",
  "cairosvg>=2.8.2,<3.0.0",
  "pycurl>=7.45.2,<8.0.0",
  "pillow-avif-plugin>=1.4.1,<2.0.0",
  "pillow-heif>=0.22.0,<1.0.0",
]

[project.scripts]
thumbor = "thumbor.server:main"
thumbor-url = "thumbor.url_composer:main"
thumbor-config = "thumbor.config:generate_config"
thumbor-doctor = "thumbor.doctor:main"

[tool.setuptools.packages.find]
include = ["thumbor*"]
exclude = ["integration_tests*", "docker*"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.cibuildwheel]
build = "cp3[89]* cp31[012]*"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64 universal2"

[tool.cibuildwheel.linux]
archs = "auto aarch64"
