[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[build-system]
requires = [
    "setuptools>=82",
    "wheel",
    "cython"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp31[0123]*"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64 universal2"

[tool.cibuildwheel.linux]
archs = "auto aarch64"
